haproxy: change config so that hub=proxy server for user

--- a/salvus/conf/haproxy.conf
+++ b/salvus/conf/haproxy.conf
@@ -77,7 +77,7 @@ backend hub
 backend proxy
     #balance roundrobin
     balance leastconn
-    cookie PROXYID$base_url insert nocache
+    cookie SERVERID$base_url insert nocache
     option httpclose
     option forwardfor
     timeout server 60s
