--- a/salvus/conf/haproxy.conf
+++ b/salvus/conf/haproxy.conf
@@ -35,6 +35,7 @@ listen http1
     acl is_hub path_beg $base_url/upload
     acl is_hub path_beg $base_url/alive
     acl is_hub path_beg $base_url/stats
+    acl is_hub path_beg $base_url/registration
 
     acl is_hub path_beg $base_url/projects
     acl is_hub path_beg $base_url/help
