optimize codemirror by making it one big js.

--- a/salvus/conf/nginx.conf
+++ b/salvus/conf/nginx.conf
@@ -9,11 +9,19 @@ events {
 }
 
 http {
+    gzip on;
+    gzip_disable "msie6";
+    gzip_vary on;
+    gzip_proxied any;
+    gzip_comp_level 6;
+    gzip_buffers 16 8k;
+    gzip_http_version 1.1;
+    gzip_types text/plain text/css application/json application/x-javascript text/xml application/xml application/xml+rss text/javascript;
+
     error_log     ../logs/$logfile;
     access_log    ../logs/$logfile;
     include       local/conf/mime.types;  # relative to nginx.conf directory not base
     default_type  application/octet-stream;
-    gzip          on;
     sendfile      on;
     keepalive_timeout  65;
     server {
