disable dangerous SSL versions due to POODLE attack.

--- a/salvus/conf/stunnel.conf
+++ b/salvus/conf/stunnel.conf
@@ -1,11 +1,15 @@
 cert = data/secrets/sagemath.com/nopassphrase.pem
 
-debug = 7
+debug = 5
 output = $logfile
 pid = $pidfile
 
 [https]
-#sslVersion = TLSv1.2
 accept  = $accept_port
 connect = $connect_port
 protocol = proxy
+sslVersion = all
+options = NO_SSLv2
+options = NO_SSLv3
+
+
