--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,7 @@ salvus/static/mercury/src/build
 salvus/static/codemirror-3.1/*
 
 salvus/static/*.min.js
+salvus/static/*.map.js
 
 salvus/scripts/skel/.sagemathcloud
 
