--- a/salvus/wizard/input/sage/sage-plotting.yaml
+++ b/salvus/wizard/input/sage/sage-plotting.yaml
@@ -3,6 +3,12 @@
 # License:   Creative Commons: Attribution-ShareAlike 4.0 International (CC BY-SA 4.0)
 
 language: sage
+category: plotting/Intro
+---
+title: 01. Into
+descr: This is a very simple example how to plot a function.
+code:  plot(x * sin(x), (x, -10, 10))
+---
 category: plotting/2D
 ---
 title: Simple 2D Plot
