--- a/salvus/wizard/input/r/intro.yaml
+++ b/salvus/wizard/input/r/intro.yaml
@@ -3,6 +3,7 @@
 # License:   Creative Commons: Attribution-ShareAlike 4.0 International (CC BY-SA 4.0)
 
 language: r
+---
 category: ["statistics", "modeling"]
 ---
 title: Linear Model
@@ -18,4 +19,6 @@ code: |
 title: ANOVA
 descr: >
     ANOVA of a linear model
-code:  TODO
+code: |
+    lm1 <- lm(y ~ x)
+    anova(lm1)
