wizard: initial integration into the CodeMirrorEditor class (I'm confused about syncdoc and not always inserting cells, but it works); fixing various subtle bugs and search highlight. also, debouncing of scrollintoview works!

--- a/salvus/wizard/input/sage/plotting.yaml
+++ b/salvus/wizard/input/sage/plotting.yaml
@@ -5,7 +5,7 @@
 language: sage
 category: plotting/Intro
 ---
-title: Into
+title: Intro
 descr: This is a very simple example how to plot a function.
 code:  plot(x * sin(x), (x, -10, 10))
 ---
