articles: make https://cloud.sagemath.com/articles resolve to https://cloud.sagemath.com/static/articles

--- a/salvus/conf/haproxy.conf
+++ b/salvus/conf/haproxy.conf
@@ -23,6 +23,13 @@ listen http1
     option forwardfor
     option http-server-close
 
+
+    # EXAMPLE from docs -- replace "/static/" with "/" at the beginning of any request path.
+    # reqrep ^([^\ :]*)\ /static/(.*)     \1\ /\2
+
+    # replace "/articles/" with "/static/articles/" at the beginning of any request path.
+    reqrep ^([^\ :]*)\ /articles/(.*)     \1\ /static/articles/\2
+
     acl is_static path_beg $base_url/static
     use_backend static if is_static
 
