--- a/salvus/conf/haproxy.conf
+++ b/salvus/conf/haproxy.conf
@@ -24,11 +24,8 @@ listen http1
     option http-server-close
 
 
-    # EXAMPLE from docs -- replace "/static/" with "/" at the beginning of any request path.
-    # reqrep ^([^\ :]*)\ /static/(.*)     \1\ /\2
-
-    # replace "/articles/" with "/static/articles/" at the beginning of any request path.
-    reqrep ^([^\ :]*)\ /articles/(.*)     \1\ /static/articles/\2
+    # replace "/policies/" with "/static/policies/" at the beginning of any request path.
+    reqrep ^([^\ :]*)\ /policies/(.*)     \1\ /static/policies/\2
 
     acl is_static path_beg $base_url/static
     use_backend static if is_static
