change cookie name due to eliminating data center

--- a/salvus/conf/haproxy.conf
+++ b/salvus/conf/haproxy.conf
@@ -67,7 +67,7 @@ backend hub
 
     #balance roundrobin
     balance leastconn
-    cookie SMCSERVERID$base_url insert nocache
+    cookie SMCSERVERID2$base_url insert nocache
     option httpclose
     option forwardfor
 
@@ -81,7 +81,7 @@ backend hub
 backend proxy
     #balance roundrobin
     balance leastconn
-    cookie SMCSERVERID$base_url insert nocache
+    cookie SMCSERVERID2$base_url insert nocache
     option httpclose
     option forwardfor
     timeout server 60s
