--- a/salvus/package.json
+++ b/salvus/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "smc",
+  "name": "sagemathcloud",
   "version": "0.9.0",
   "description": "A collaborative web-based interface to Sage, IPython, LaTeX and the Terminal.",
   "main": "index.js",
