--- a/salvus/package.json
+++ b/salvus/package.json
@@ -66,7 +66,8 @@
     "ws": "^0.7.1"
   },
   "devDependencies": {
-    "coffee-script": "^1.9.0"
+    "coffee-script": "^1.9.0",
+    "jest-cli": "^0.4.13"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
