--- a/salvus/package.json
+++ b/salvus/package.json
@@ -69,8 +69,14 @@
     "coffee-script": "^1.9.0",
     "jest-cli": "^0.4.13"
   },
+  "jest": {
+    "scriptPreprocessor": "jest-preprocessor.js",
+    "testFileExtensions": ["coffee", "litcoffee", "coffee.md", "js"],
+    "moduleFileExtensions": ["coffee", "litcoffee", "coffee.md", "js"],
+    "modulePathIgnorePatterns": ["/data/"]
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
