--- a/salvus/package.json
+++ b/salvus/package.json
@@ -69,29 +69,8 @@
   },
   "devDependencies": {
     "coffee-script": "^1.9.0",
-    "jest-cli": "^0.4.13",
+    "jsdom": ">= 0.1.23 < 4.0.0",
     "mocha": "^2.2.5"
-  },
-  "jest": {
-    "scriptPreprocessor": "jest-preprocessor.js",
-    "testFileExtensions": [
-      "coffee",
-      "litcoffee",
-      "coffee.md",
-      "js"
-    ],
-    "moduleFileExtensions": [
-      "coffee",
-      "litcoffee",
-      "coffee.md",
-      "js"
-    ],
-    "modulePathIgnorePatterns": [
-      "data",
-      "static",
-      "node_modules"
-    ],
-    "unmockedModulePathPatterns": []
   },
   "scripts": {
     "test": "mocha --compilers coffee:coffee-script/register"
