--- a/salvus/package.json
+++ b/salvus/package.json
@@ -70,7 +70,8 @@
   "devDependencies": {
     "coffee-script": "^1.9.0",
     "jsdom": ">= 0.1.23 < 4.0.0",
-    "mocha": "^2.2.5"
+    "mocha": "^2.2.5",
+    "should": "^7.0.1"
   },
   "scripts": {
     "test": "mocha --compilers coffee:coffee-script/register"
