--- a/salvus/package.json
+++ b/salvus/package.json
@@ -71,7 +71,9 @@
     "coffee-script": "^1.9.0",
     "jsdom": ">= 0.1.23 < 4.0.0",
     "mocha": "^2.2.5",
-    "should": "^7.0.1"
+    "should": "^7.0.1",
+    "should-sinon": "*",
+    "sinon": "^1.15.3"
   },
   "scripts": {
     "test": "mocha --compilers coffee:coffee-script/register"
