--- a/salvus/package.json
+++ b/salvus/package.json
@@ -70,9 +70,9 @@
   "devDependencies": {
     "coffee-script": "^1.9.0",
     "jsdom": ">= 0.1.23 < 4.0.0",
-    "mocha": "^2.2.5",
+    "mocha": "*",
     "should": "^7.0.1",
-    "should-sinon": "*",
+    "should-sinon": "0.0.1",
     "sinon": "^1.15.3"
   },
   "scripts": {
