--- a/salvus/package.json
+++ b/salvus/package.json
@@ -68,15 +68,21 @@
     "ws": "^0.7.1"
   },
   "devDependencies": {
+    "coffee-coverage": "^0.6.2",
     "coffee-script": "^1.9.0",
+    "coveralls": "^2.11.2",
+    "istanbul": "^0.3.15",
     "jsdom": ">= 0.1.23 < 4.0.0",
     "mocha": "*",
+    "mocha-lcov-reporter": "0.0.2",
     "should": "^7.0.1",
     "should-sinon": "0.0.1",
     "sinon": "^1.15.3"
   },
   "scripts": {
-    "test": "mocha --compilers coffee:coffee-script/register --reporter spec"
+    "test": "mocha",
+    "coverage": "mocha --compilers coffee:coffee-script/register --require coffee-coverage/register-istanbul --reporter spec --recursive && istanbul report",
+    "coveralls": "mocha --compilers coffee:coffee-script/register --require coffee-coverage/register-istanbul --reporter spec --recursive && istanbul report text-summary lcov"
   },
   "repository": {
     "type": "git",
