testing: tweaking istanbul (server side coffeescript coverage), notes for devops in readme, testing the uuid verification

--- a/salvus/.istanbul.yml
+++ b/salvus/.istanbul.yml
@@ -1,3 +1,5 @@
 instrumentation:
     root: .
-    excludes: ['node_modules', 'static']
+    excludes:
+        - 'salvus/page/**'
+        - 'salvus/static/jquery/*'
