--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,9 @@ node_js:
 # Travis supports "global" and "build matrix" variables
 # http://docs.travis-ci.com/user/environment-variables/
 env:
-  # not used. it should indicates that this test run checks the server side
-  - MODE=server
+  matrix:
+    - MODE=server
+    # - MODE=client
 
 # Installation and setup
 before_script:
@@ -20,6 +21,7 @@ before_script:
   # besides rethinkdb, we need at least python-yaml
   - sudo apt-get install rethinkdb python-yaml --force-yes
   - rethinkdb --daemon
+  # the setup & compilation of SMC
   - cd salvus
   - source salvus-env
   - npm install
@@ -29,11 +31,12 @@ before_script:
 # A non-zero exit code indicates a failure.
 # npm test is the usual, but we also run coverage reporting
 script:
-  - npm run coveralls
+  - test $MODE = server && npm run coveralls || exit 0
+  - test $MODE = client && echo "insert client testing command here" || exit 0
 
 # send coverage report over to https://coveralls.io
 after_success:
-  - 'cat ./coverage/lcov.info | ./node_modules/.bin/coveralls'
+  - test $MODE = client && sh -c 'cat ./coverage/lcov.info | ./node_modules/.bin/coveralls'
 
 notifications:
   slack:
