--- a/.travis.yml
+++ b/.travis.yml
@@ -20,12 +20,13 @@ before_script:
   - sudo apt-get update -qq
   # besides rethinkdb, we need at least python-yaml
   - sudo apt-get install rethinkdb python-yaml --force-yes
+  - rethinkdb --version
   - rethinkdb --daemon
   # the setup & compilation of SMC
   - cd salvus
   - source salvus-env
   - npm install
-  - ./make_coffee
+  - npm run make
 
 # This is the actual testing, which runs in the same directory where `before_script` did end up in.
 # A non-zero exit code indicates a failure.
