--- a/.travis.yml
+++ b/.travis.yml
@@ -35,7 +35,8 @@ before_script:
   # the setup & compilation of SMC
   - cd salvus
   - source salvus-env
-  - npm update     # will install missing packages, but never the devDependencies
+  - npm install --production # don't install devDependencies
+  - npm update # will updated packages if they are cached, but never the devDependencies
   - npm run make
 
 # This is the actual testing, which runs in the same directory where `before_script` did end up in.
