Finishing touches on new file in project

--- a/salvus/package.json
+++ b/salvus/package.json
@@ -52,8 +52,10 @@
     "pty.js": "^0.2.5",
     "react": "^0.13.3",
     "react-bootstrap": "^0.23.1",
-    "react-dropzone-component": "^0.4.3",
+    "react-chosen": "^0.3.8",
+    "react-dropzone-component": "git://github.com/felixrieseberg/React-Dropzone-Component",
     "react-native-listener": "0.0.6",
+    "react-select": "git://github.com/JedWatson/react-select",
     "react-timeago": "^2.2.1",
     "read": "^1.0.5",
     "rethinkdb": "^2.0.0-1",
