--- a/salvus/package.json
+++ b/salvus/package.json
@@ -53,7 +53,7 @@
     "react": "^0.13.3",
     "react-bootstrap": "^0.23.1",
     "react-chosen": "^0.3.8",
-    "react-dropzone-component": "git://github.com/felixrieseberg/React-Dropzone-Component",
+    "react-dropzone-component": "^0.4.3",
     "react-native-listener": "0.0.6",
     "react-select": "git://github.com/JedWatson/react-select",
     "react-timeago": "^2.2.1",
