--- a/salvus/package.json
+++ b/salvus/package.json
@@ -27,6 +27,7 @@
     "htmlparser": "^1.7.7",
     "http-proxy": "^1.8.1",
     "immutable": "^3.7.4",
+    "jquery.payment": "git://github.com/stripe/jquery.payment",
     "marked": "^0.3.3",
     "mime": "^1.3.4",
     "mkdirp": "^0.5.0",
