billing: start webhooks stuff; raise invoice limit

--- a/salvus/conf/haproxy.conf
+++ b/salvus/conf/haproxy.conf
@@ -38,6 +38,7 @@ listen http1
     acl is_hub path_beg $base_url/alive
     acl is_hub path_beg $base_url/auth
     acl is_hub path_beg $base_url/stats
+    acl is_hub path_beg $base_url/stripe
     acl is_hub path_beg $base_url/registration
 
     acl is_hub path_beg $base_url/projects
