update to use new official sendgrid library

--- a/salvus/package.json
+++ b/salvus/package.json
@@ -34,8 +34,6 @@
     "moment": "^2.9.0",
     "node-sass": "^2.0.1",
     "node-uuid": "^1.4.2",
-    "nodemailer": "^1.3.0",
-    "nodemailer-sendgrid-transport": "^0.1.0",
     "nodeunit": "^0.9.0",
     "passport": "^0.2.1",
     "passport-bitbucket": "^0.1.2",
@@ -62,6 +60,7 @@
     "rethinkdb": "^2.0.0-1",
     "rethinkdbdash": "^2.0.11",
     "rimraf": "^2.2.8",
+    "sendgrid": "^1.9.2",
     "sockjs": "^0.3.12",
     "sqlite3": "^3.0.5",
     "start-stop-daemon": "^0.1.0",
