--- a/salvus/package.json
+++ b/salvus/package.json
@@ -22,6 +22,7 @@
     "express": "^4.11.2",
     "express-session": "^1.10.4",
     "flummox": "^3.5.2",
+    "font-awesome": "^4.4.0",
     "formidable": "^1.0.17",
     "hashring": "^3.1.0",
     "htmlparser": "^1.7.7",
