--- a/salvus/package.json
+++ b/salvus/package.json
@@ -63,6 +63,7 @@
     "rethinkdbdash": "^2.0.11",
     "rimraf": "^2.2.8",
     "sendgrid": "^1.9.2",
+    "sha1": "^1.1.1",
     "sockjs": "^0.3.12",
     "sqlite3": "^3.0.5",
     "start-stop-daemon": "^0.1.0",
