--- a/salvus/package.json
+++ b/salvus/package.json
@@ -15,6 +15,7 @@
     "browserify": "^1.16.4",
     "cassandra-driver": "^2.0.1",
     "coffee-react": "^3.2.0",
+    "coffeelint": "^1.10.1",
     "commander": "^2.6.0",
     "cookies": "^0.5.0",
     "engine.io": "^1.5.1",
