--- a/salvus/package.json
+++ b/salvus/package.json
@@ -94,7 +94,8 @@
     "test": "mocha --reporter progress",
     "coverage": "rm -rf ./coverage/; mocha --require ./coffee-coverage-loader.js && istanbul report text html",
     "coveralls": "rm -rf ./coverage/; mocha --require ./coffee-coverage-loader.js && istanbul report text-summary lcov",
-    "make": "make_coffee; cd $SALVUS_ROOT/static/codemirror; ./smc-minify.py"
+    "make": "make_coffee; cd $SALVUS_ROOT/static/codemirror; ./smc-minify.py",
+    "lint": "cd $SALVUS_ROOT; coffeelint -c *.coffee page/*.coffee "
   },
   "repository": {
     "type": "git",
