chat: wrote a very basic implementation of a chat room page

--- a/.gitignore
+++ b/.gitignore
@@ -66,3 +66,6 @@ salvus/coverage
 # comes up when testing in that directory
 salvus/rethinkdb_data/
 
+
+salvus/static/primus/primus-engine.js
+salvus/static/primus/primus-engine.min.js
