finish site customization support (backend part)

--- a/salvus/conf/haproxy.conf
+++ b/salvus/conf/haproxy.conf
@@ -40,6 +40,7 @@ listen http1
     acl is_hub path_beg $base_url/stats
     acl is_hub path_beg $base_url/stripe
     acl is_hub path_beg $base_url/registration
+    acl is_hub path_beg $base_url/customize
 
     acl is_hub path_beg $base_url/projects
     acl is_hub path_beg $base_url/help
