--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,8 @@ salvus/static/sass/
 salvus/static/index.map.css
 salvus/static/index.sass
 
+salvus/static/policies/pricing.html
+
 salvus/page/temp
 
 salvus/static/mercury/js/mercury.min.js
