update rethinkdb package

--- a/salvus/package.json
+++ b/salvus/package.json
@@ -62,7 +62,7 @@
     "react-timeago": "^2.2.1",
     "react-widgets": "^2.7.2",
     "read": "^1.0.5",
-    "rethinkdb": "^2.0.0-1",
+    "rethinkdb": "^2.1.1",
     "rethinkdbdash": "^2.0.11",
     "rimraf": "^2.2.8",
     "sendgrid": "^1.9.2",
