--- a/salvus/package.json
+++ b/salvus/package.json
@@ -11,13 +11,16 @@
     "async": "^0.9.0",
     "blocked": "^1.1.0",
     "body-parser": "^1.12.2",
-    "browserify": "^1.16.4",
+    "browserify": "^11.2.0",
+    "cjsx-loader": "^2.0.1",
+    "coffee-loader": "^0.7.2",
     "coffee-react": "^3.2.0",
     "coffee-react-transform": "^3.2.0",
     "coffeelint": "^1.10.1",
-    "coffeelint-cjsx": "git://github.com/sagemathinc/coffeelint-cjsx",
+    "coffeelint-cjsx": "git://github.com/sagemathinc/coffeelint-cjsx.git",
     "commander": "^2.6.0",
     "cookies": "^0.5.0",
+    "css-loader": "^0.19.0",
     "engine.io": "^1.5.1",
     "envify": "^3.4.0",
     "expect": "^1.6.0",
@@ -31,14 +34,14 @@
     "htmlparser": "^1.7.7",
     "http-proxy": "^1.8.1",
     "immutable": "^3.7.4",
-    "jquery.payment": "git://github.com/stripe/jquery.payment",
+    "jquery.payment": "git://github.com/stripe/jquery.payment.git",
     "marked": "^0.3.3",
     "mathjax": "^2.5.1",
     "md5": "^2.0.0",
     "mime": "^1.3.4",
     "mkdirp": "^0.5.1",
     "moment": "^2.9.0",
-    "node-sass": "^2.0.1",
+    "node-sass": "^3.3.3",
     "node-uuid": "^1.4.2",
     "nodeunit": "^0.9.0",
     "passport": "^0.2.1",
@@ -55,28 +58,32 @@
     "posix": "^2.0.0",
     "primus": "^2.4.12",
     "pty.js": "^0.2.5",
-    "react": "^0.13.3",
-    "react-bootstrap": "^0.23.7",
+    "react": "^0.14.0",
+    "react-bootstrap": "^0.27.1",
     "react-chosen": "^0.3.8",
-    "react-dropzone-component": "^0.4.3",
-    "react-select": "git://github.com/JedWatson/react-select",
+    "react-dropzone-component": "^0.6.1",
+    "react-select": "git://github.com/JedWatson/react-select.git",
     "react-timeago": "^2.2.1",
-    "react-widgets": "^2.7.2",
+    "react-widgets": "jquense/react-widgets",
     "read": "^1.0.5",
     "rethinkdb": "^2.1.1",
     "rimraf": "^2.2.8",
+    "sass-loader": "^3.0.0",
     "sendgrid": "^1.9.2",
     "sha1": "^1.1.1",
     "sockjs": "^0.3.12",
     "sqlite3": "^3.0.5",
     "start-stop-daemon": "^0.1.0",
     "stripe": "^3.2.0",
+    "style-loader": "^0.12.4",
     "temp": "^0.8.1",
     "uglify-js2": "^2.1.11",
     "underscore": "^1.7.0",
     "uuid-time": "^1.0.0",
     "validator": "^3.30.0",
     "walk": "^2.3.9",
+    "webpack": "^1.12.2",
+    "webpack-dev-server": "^1.12.0",
     "winston": "^0.9.0",
     "ws": "^0.7.1"
   },
@@ -96,7 +103,9 @@
     "test": "SMC_TEST=true mocha --reporter progress",
     "coverage": "rm -rf ./coverage/; mocha --require ./coffee-coverage-loader.js && istanbul report text html",
     "coveralls": "rm -rf ./coverage/; mocha --require ./coffee-coverage-loader.js && istanbul report text-summary lcov",
-    "lint": "cd $SALVUS_ROOT; coffeelint -c *.coffee page/*.coffee page/*.cjsx"
+    "lint": "cd $SALVUS_ROOT; coffeelint -c *.coffee page/*.coffee page/*.cjsx",
+    "webpack": "cd $SALVUS_ROOT; webpack --progress --colors",
+    "webpack-watch": "cd $SALVUS_ROOT; webpack --progress --colors --watch"
   },
   "repository": {
     "type": "git",
