upgrade: support "npm run make" again

--- a/salvus/package.json
+++ b/salvus/package.json
@@ -103,7 +103,8 @@
     "coveralls": "rm -rf ./coverage/; mocha --require ./coffee-coverage-loader.js && istanbul report text-summary lcov",
     "lint": "cd $SALVUS_ROOT; coffeelint -c *.coffee page/*.coffee page/*.cjsx",
     "webpack": "cd $SALVUS_ROOT; webpack --progress --colors",
-    "webpack-watch": "cd $SALVUS_ROOT; webpack --progress --colors --watch"
+    "webpack-watch": "cd $SALVUS_ROOT; webpack --progress --colors --watch",
+    "make": "cd $SALVUS_ROOT; ./make_coffee && webpack --progress"
   },
   "repository": {
     "type": "git",
