--- a/salvus/package.json
+++ b/salvus/package.json
@@ -13,7 +13,7 @@
     "body-parser": "^1.12.2",
     "cjsx-loader": "^2.0.1",
     "coffee-loader": "^0.7.2",
-    "coffee-react": "^3.2.0",
+    "coffee-react": "^4.0.0",
     "coffee-react-transform": "^3.2.0",
     "coffeelint": "^1.10.1",
     "coffeelint-cjsx": "git://github.com/sagemathinc/coffeelint-cjsx.git",
@@ -42,6 +42,7 @@
     "node-sass": "^3.3.3",
     "node-uuid": "^1.4.2",
     "nodeunit": "^0.9.0",
+    "npm-check-updates": "^2.3.2",
     "passport": "^0.2.1",
     "passport-bitbucket": "^0.1.2",
     "passport-dropbox-oauth2": "^0.1.6",
@@ -92,9 +93,9 @@
     "istanbul": "^0.3.15",
     "jsdom": ">= 0.1.23 < 4.0.0",
     "mocha": "*",
-    "mocha-lcov-reporter": "0.0.2",
+    "mocha-lcov-reporter": "1.0.0",
     "should": "^7.0.1",
-    "should-sinon": "0.0.1",
+    "should-sinon": "0.0.3",
     "sinon": "^1.15.3"
   },
   "scripts": {
