--- a/salvus/package.json
+++ b/salvus/package.json
@@ -100,6 +100,7 @@
   },
   "scripts": {
     "test": "SMC_TEST=true mocha --reporter progress",
+    "test-list": "SMC_TEST=true mocha --reporter list",
     "coverage": "rm -rf ./coverage/; SMC_TEST=true mocha --require ./coffee-coverage-loader.js && istanbul report text html",
     "coveralls": "rm -rf ./coverage/; SMC_TEST=true mocha --require ./coffee-coverage-loader.js && istanbul report text-summary lcov",
     "lint": "cd $SALVUS_ROOT; coffeelint -c *.coffee page/*.coffee page/*.cjsx",
