--- a/salvus/package.json
+++ b/salvus/package.json
@@ -33,6 +33,7 @@
     "http-proxy": "^1.8.1",
     "immutable": "^3.7.4",
     "jquery.payment": "git://github.com/stripe/jquery.payment.git",
+    "json-loader": "^0.5.3",
     "marked": "^0.3.3",
     "mathjax": "^2.5.1",
     "md5": "^2.0.0",
@@ -61,6 +62,7 @@
     "react-bootstrap": "^0.27.1",
     "react-chosen": "^0.3.8",
     "react-dropzone-component": "paulsocal/React-Dropzone-Component",
+    "react-kronos": "clickblipclick/react-kronos",
     "react-select": "git://github.com/JedWatson/react-select.git",
     "react-timeago": "^2.2.1",
     "react-widgets": "jquense/react-widgets",
