--- a/.gitignore
+++ b/.gitignore
@@ -19,8 +19,11 @@ data/
 node_modules
 *.sass-cache
 
-salvus/static/webpack.js
-salvus/static/webpack.js.map
+salvus/static/*webapp*.js
+salvus/static/*webapp*.js.map
+salvus/static/*vendor*.js
+salvus/static/*vendor*.js.map
+
 salvus/static/salvus_base_url.js
 salvus/static/salvus/*.js
 salvus/static/index.js
