webpack: convert more of SMC to be lazy loaded and also make the three.js stuff get loaded entirely with webpack.

--- a/.gitignore
+++ b/.gitignore
@@ -19,10 +19,7 @@ data/
 node_modules
 *.sass-cache
 
-salvus/static/*webapp*.js
-salvus/static/*webapp*.js.map
-salvus/static/*vendor*.js
-salvus/static/*vendor*.js.map
+salvus/static/webpack
 
 salvus/static/salvus_base_url.js
 salvus/static/salvus/*.js
