--- a/salvus/package.json
+++ b/salvus/package.json
@@ -70,6 +70,7 @@
     "rethinkdb": "^2.1.1",
     "rimraf": "^2.2.8",
     "sass-loader": "^3.0.0",
+    "script-loader": "^0.6.1",
     "sendgrid": "^1.9.2",
     "sha1": "^1.1.1",
     "sockjs": "^0.3.12",
@@ -78,6 +79,7 @@
     "stripe": "^3.2.0",
     "style-loader": "^0.12.4",
     "temp": "^0.8.1",
+    "three": "^0.72.0",
     "uglify-js2": "^2.1.11",
     "underscore": "^1.7.0",
     "uuid-time": "^1.0.0",
